WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
128247
ElementRuleCollector should not use StyleResolver::State
https://bugs.webkit.org/show_bug.cgi?id=128247
Summary
ElementRuleCollector should not use StyleResolver::State
Antti Koivisto
Reported
2014-02-05 06:35:13 PST
improve factoring
Attachments
patch
(21.49 KB, patch)
2014-02-05 12:05 PST
,
Antti Koivisto
kling
: review+
Details
Formatted Diff
Diff
rebased patch
(21.37 KB, patch)
2014-02-05 12:34 PST
,
Antti Koivisto
buildbot
: commit-queue-
Details
Formatted Diff
Diff
Archive of layout-test-results from webkit-ews-04 for mac-mountainlion
(592.02 KB, application/zip)
2014-02-05 13:33 PST
,
Build Bot
no flags
Details
Archive of layout-test-results from webkit-ews-16 for mac-mountainlion-wk2
(501.89 KB, application/zip)
2014-02-05 13:34 PST
,
Build Bot
no flags
Details
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Antti Koivisto
Comment 1
2014-02-05 12:05:40 PST
Created
attachment 223254
[details]
patch
Antti Koivisto
Comment 2
2014-02-05 12:34:55 PST
Created
attachment 223257
[details]
rebased patch
Build Bot
Comment 3
2014-02-05 13:33:02 PST
Comment on
attachment 223257
[details]
rebased patch
Attachment 223257
[details]
did not pass mac-ews (mac): Output:
http://webkit-queues.appspot.com/results/4774333763289088
New failing tests: fast/parser/xhtml-alternate-entities.xml
Build Bot
Comment 4
2014-02-05 13:33:04 PST
Created
attachment 223260
[details]
Archive of layout-test-results from webkit-ews-04 for mac-mountainlion The attached test failures were seen while running run-webkit-tests on the mac-ews. Bot: webkit-ews-04 Port: mac-mountainlion Platform: Mac OS X 10.8.5
Build Bot
Comment 5
2014-02-05 13:34:55 PST
Comment on
attachment 223257
[details]
rebased patch
Attachment 223257
[details]
did not pass mac-wk2-ews (mac-wk2): Output:
http://webkit-queues.appspot.com/results/6401327370338304
New failing tests: fast/parser/xhtml-alternate-entities.xml
Build Bot
Comment 6
2014-02-05 13:34:58 PST
Created
attachment 223262
[details]
Archive of layout-test-results from webkit-ews-16 for mac-mountainlion-wk2 The attached test failures were seen while running run-webkit-tests on the mac-wk2-ews. Bot: webkit-ews-16 Port: mac-mountainlion-wk2 Platform: Mac OS X 10.8.5
Antti Koivisto
Comment 7
2014-02-05 13:46:26 PST
https://trac.webkit.org/r163475
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug