Source/WebCore/css/ElementRuleCollector.cpp
@@ -2,7 +2,7 @@
  * Copyright (C) 1999 Lars Knoll (knoll@kde.org)
  *           (C) 2004-2005 Allan Sandfeld Jensen (kde@carewolf.com)
  * Copyright (C) 2006, 2007 Nicholas Shanks (webkit@nickshanks.com)
- * Copyright (C) 2005, 2006, 2007, 2008, 2009, 2010, 2011, 2012, 2013 Apple Inc. All rights reserved.
+ * Copyright (C) 2005, 2006, 2007, 2008, 2009, 2010, 2011, 2012, 2013, 2014 Apple Inc. All rights reserved.
  * Copyright (C) 2007 Alexey Proskuryakov <ap@webkit.org>
  * Copyright (C) 2007, 2008 Eric Seidel <eric@webkit.org>
  * Copyright (C) 2008, 2009 Torch Mobile Inc. All rights reserved. (http://www.torchmobile.com/)
@@ -145,19 +145,13 @@ bool MatchingUARulesScope::m_matchingUARules = false;
 void ElementRuleCollector::collectMatchingRules(const MatchRequest& matchRequest, StyleResolver::RuleRange& ruleRange)
 {
     ASSERT(matchRequest.ruleSet);
-    ASSERT(m_state.element());
 
-    const StyleResolver::State& state = m_state;
-    Element* element = state.element();
-    const StyledElement* styledElement = state.styledElement();
-    const AtomicString& pseudoId = element->shadowPseudoId();
-    if (!pseudoId.isEmpty()) {
-        ASSERT(styledElement);
+    const AtomicString& pseudoId = m_element.shadowPseudoId();
+    if (!pseudoId.isEmpty())
         collectMatchingRulesForList(matchRequest.ruleSet->shadowPseudoElementRules(pseudoId.impl()), matchRequest, ruleRange);
-    }
 
 #if ENABLE(VIDEO_TRACK)
-    if (element->isWebVTTElement())
+    if (m_element.isWebVTTElement())
         collectMatchingRulesForList(matchRequest.ruleSet->cuePseudoRules(), matchRequest, ruleRange);
 #endif
     // Check whether other types of rules are applicable in the current tree scope. Criteria for this:
@@ -165,23 +159,23 @@ void ElementRuleCollector::collectMatchingRules(const MatchRequest& matchRequest
     // b) the tree scope allows author rules
     // c) the rules comes from a scoped style sheet within the same tree scope
     if (!MatchingUARulesScope::isMatchingUARules()
-        && !element->treeScope().applyAuthorStyles())
+        && !m_element.treeScope().applyAuthorStyles())
         return;
 
     // We need to collect the rules for id, class, tag, and everything else into a buffer and
     // then sort the buffer.
-    if (element->hasID())
-        collectMatchingRulesForList(matchRequest.ruleSet->idRules(element->idForStyleResolution().impl()), matchRequest, ruleRange);
-    if (styledElement && styledElement->hasClass()) {
-        for (size_t i = 0; i < styledElement->classNames().size(); ++i)
-            collectMatchingRulesForList(matchRequest.ruleSet->classRules(styledElement->classNames()[i].impl()), matchRequest, ruleRange);
+    if (m_element.hasID())
+        collectMatchingRulesForList(matchRequest.ruleSet->idRules(m_element.idForStyleResolution().impl()), matchRequest, ruleRange);
+    if (m_element.hasClass()) {
+        for (size_t i = 0; i < m_element.classNames().size(); ++i)
+            collectMatchingRulesForList(matchRequest.ruleSet->classRules(m_element.classNames()[i].impl()), matchRequest, ruleRange);
     }
 
-    if (element->isLink())
+    if (m_element.isLink())
         collectMatchingRulesForList(matchRequest.ruleSet->linkPseudoClassRules(), matchRequest, ruleRange);
-    if (SelectorChecker::matchesFocusPseudoClass(element))
+    if (SelectorChecker::matchesFocusPseudoClass(&m_element))
         collectMatchingRulesForList(matchRequest.ruleSet->focusPseudoClassRules(), matchRequest, ruleRange);
-    collectMatchingRulesForList(matchRequest.ruleSet->tagRules(element->localName().impl()), matchRequest, ruleRange);
+    collectMatchingRulesForList(matchRequest.ruleSet->tagRules(m_element.localName().impl()), matchRequest, ruleRange);
     collectMatchingRulesForList(matchRequest.ruleSet->universalRules(), matchRequest, ruleRange);
 }
 
@@ -203,8 +197,6 @@ void ElementRuleCollector::collectMatchingRulesForRegion(const MatchRequest& mat
 
 void ElementRuleCollector::sortAndTransferMatchedRules()
 {
-    const StyleResolver::State& state = m_state;
-
     if (!m_matchedRules || m_matchedRules->isEmpty())
         return;
 
@@ -219,8 +211,8 @@ void ElementRuleCollector::sortAndTransferMatchedRules()
 
     // Now transfer the set of matched rules over to our list of declarations.
     for (unsigned i = 0; i < matchedRules.size(); i++) {
-        if (state.style() && matchedRules[i]->containsUncommonAttributeSelector())
-            state.style()->setUnique();
+        if (m_style && matchedRules[i]->containsUncommonAttributeSelector())
+            m_style->setUnique();
         m_result.addMatchedProperties(matchedRules[i]->rule()->properties(), matchedRules[i]->rule(), matchedRules[i]->linkMatchType(), matchedRules[i]->propertyWhitelistType(MatchingUARulesScope::isMatchingUARules()));
     }
 }
@@ -229,9 +221,6 @@ void ElementRuleCollector::matchAuthorRules(bool includeEmptyRules)
 {
     clearMatchedRules();
     m_result.ranges.lastAuthorRule = m_result.matchedProperties.size() - 1;
-
-    if (!m_state.element())
-        return;
 
     // Match global author rules.
     MatchRequest matchRequest(m_ruleSets.authorStyle(), includeEmptyRules);
@@ -270,11 +259,11 @@ void ElementRuleCollector::matchUARules()
     matchUARules(userAgentStyleSheet);
 
     // In quirks mode, we match rules from the quirks user agent sheet.
-    if (document().inQuirksMode())
+    if (m_element.document().inQuirksMode())
         matchUARules(CSSDefaultStyleSheets::defaultQuirksStyle);
 
     // If document uses view source styles (in view source mode or in xml viewer mode), then we match rules from the view source style sheet.
-    if (document().isViewSource())
+    if (m_element.document().isViewSource())
         matchUARules(CSSDefaultStyleSheets::viewSourceStyle());
 }
 
@@ -291,8 +280,6 @@ void ElementRuleCollector::matchUARules(RuleSet* rules)
 
 inline bool ElementRuleCollector::ruleMatches(const RuleData& ruleData, PseudoId& dynamicPseudo)
 {
-    const StyleResolver::State& state = m_state;
-
     bool fastCheckableSelector = ruleData.hasFastCheckableSelector();
     if (fastCheckableSelector) {
         // We know this selector does not include any pseudo elements.
@@ -300,7 +287,7 @@ inline bool ElementRuleCollector::ruleMatches(const RuleData& ruleData, PseudoId
             return false;
         // We know a sufficiently simple single part selector matches simply because we found it from the rule hash.
         // This is limited to HTML only so we don't need to check the namespace.
-        if (ruleData.hasRightmostSelectorMatchingHTMLBasedOnRuleHash() && state.element()->isHTMLElement()) {
+        if (ruleData.hasRightmostSelectorMatchingHTMLBasedOnRuleHash() && m_element.isHTMLElement()) {
             if (!ruleData.hasMultipartSelector())
                 return true;
         }
@@ -309,7 +296,7 @@ inline bool ElementRuleCollector::ruleMatches(const RuleData& ruleData, PseudoId
 #if ENABLE(CSS_SELECTOR_JIT)
     void* compiledSelectorChecker = ruleData.compiledSelectorCodeRef().code().executableAddress();
     if (!compiledSelectorChecker && ruleData.compilationStatus() == SelectorCompilationStatus::NotCompiled) {
-        JSC::VM* vm = document().scriptExecutionContext()->vm();
+        JSC::VM* vm = m_element.document().scriptExecutionContext()->vm();
         SelectorCompilationStatus compilationStatus;
         JSC::MacroAssemblerCodeRef compiledSelectorCodeRef;
         compilationStatus = SelectorCompiler::compileSelector(ruleData.selector(), vm, compiledSelectorCodeRef);
@@ -323,22 +310,22 @@ inline bool ElementRuleCollector::ruleMatches(const RuleData& ruleData, PseudoId
 
         if (ruleData.compilationStatus() == SelectorCompilationStatus::SimpleSelectorChecker) {
             SelectorCompiler::SimpleSelectorChecker selectorChecker = SelectorCompiler::simpleSelectorCheckerFunction(compiledSelectorChecker, ruleData.compilationStatus());
-            return selectorChecker(state.element());
+            return selectorChecker(&m_element);
         }
         ASSERT(ruleData.compilationStatus() == SelectorCompilationStatus::SelectorCheckerWithCheckingContext);
 
         SelectorCompiler::SelectorCheckerWithCheckingContext selectorChecker = SelectorCompiler::selectorCheckerFunctionWithCheckingContext(compiledSelectorChecker, ruleData.compilationStatus());
         SelectorCompiler::CheckingContext context;
-        context.elementStyle = state.style();
+        context.elementStyle = m_style;
         context.resolvingMode = m_mode;
-        return selectorChecker(state.element(), &context);
+        return selectorChecker(&m_element, &context);
     }
 #endif // ENABLE(CSS_SELECTOR_JIT)
 
     if (fastCheckableSelector) {
-        if (ruleData.selector()->m_match == CSSSelector::Tag && !SelectorChecker::tagMatches(state.element(), ruleData.selector()->tagQName()))
+        if (ruleData.selector()->m_match == CSSSelector::Tag && !SelectorChecker::tagMatches(&m_element, ruleData.selector()->tagQName()))
             return false;
-        SelectorCheckerFastPath selectorCheckerFastPath(ruleData.selector(), state.element());
+        SelectorCheckerFastPath selectorCheckerFastPath(ruleData.selector(), &m_element);
         if (!selectorCheckerFastPath.matchesRightmostAttributeSelector())
             return false;
 
@@ -346,9 +333,9 @@ inline bool ElementRuleCollector::ruleMatches(const RuleData& ruleData, PseudoId
     }
 
     // Slow path.
-    SelectorChecker selectorChecker(document(), m_mode);
-    SelectorChecker::SelectorCheckingContext context(ruleData.selector(), state.element(), SelectorChecker::VisitedMatchEnabled);
-    context.elementStyle = state.style();
+    SelectorChecker selectorChecker(m_element.document(), m_mode);
+    SelectorChecker::SelectorCheckingContext context(ruleData.selector(), &m_element, SelectorChecker::VisitedMatchEnabled);
+    context.elementStyle = m_style;
     context.pseudoId = m_pseudoStyleRequest.pseudoId;
     context.scrollbar = m_pseudoStyleRequest.scrollbar;
     context.scrollbarPart = m_pseudoStyleRequest.scrollbarPart;
@@ -363,8 +350,6 @@ void ElementRuleCollector::collectMatchingRulesForList(const Vector<RuleData>* r
 {
     if (!rules)
         return;
-
-    const StyleResolver::State& state = m_state;
 
     for (unsigned i = 0, size = rules->size(); i < size; ++i) {
         const RuleData& ruleData = rules->data()[i];
@@ -392,8 +377,8 @@ void ElementRuleCollector::collectMatchingRulesForList(const Vector<RuleData>* r
             if (dynamicPseudo != NOPSEUDO && m_pseudoStyleRequest.pseudoId == NOPSEUDO) {
                 if (m_mode == SelectorChecker::CollectingRules)
                     continue;
-                if (dynamicPseudo < FIRST_INTERNAL_PSEUDOID)
-                    state.style()->setHasPseudoStyle(dynamicPseudo);
+                if (dynamicPseudo < FIRST_INTERNAL_PSEUDOID && m_style)
+                    m_style->setHasPseudoStyle(dynamicPseudo);
             } else {
                 // Update our first/last rule indices in the matched rules array.
                 ++ruleRange.lastRuleIndex;
@@ -430,17 +415,18 @@ void ElementRuleCollector::matchAllRules(bool matchAuthorAndUserStyles, bool inc
         matchUserRules(false);
 
     // Now check author rules, beginning first with presentational attributes mapped from HTML.
-    if (m_state.styledElement()) {
-        addElementStyleProperties(m_state.styledElement()->presentationAttributeStyle());
+    if (m_element.isStyledElement()) {
+        StyledElement& styledElement = toStyledElement(m_element);
+        addElementStyleProperties(styledElement.presentationAttributeStyle());
 
         // Now we check additional mapped declarations.
         // Tables and table cells share an additional mapped rule that must be applied
         // after all attributes, since their mapped style depends on the values of multiple attributes.
-        addElementStyleProperties(m_state.styledElement()->additionalPresentationAttributeStyle());
+        addElementStyleProperties(styledElement.additionalPresentationAttributeStyle());
 
-        if (m_state.styledElement()->isHTMLElement()) {
+        if (styledElement.isHTMLElement()) {
             bool isAuto;
-            TextDirection textDirection = toHTMLElement(m_state.styledElement())->directionalityIfhasDirAutoAttribute(isAuto);
+            TextDirection textDirection = toHTMLElement(styledElement).directionalityIfhasDirAutoAttribute(isAuto);
             if (isAuto)
                 m_result.addMatchedProperties(textDirection == LTR ? leftToRightDeclaration() : rightToLeftDeclaration());
         }
@@ -450,18 +436,21 @@ void ElementRuleCollector::matchAllRules(bool matchAuthorAndUserStyles, bool inc
     if (matchAuthorAndUserStyles)
         matchAuthorRules(false);
 
-    // Now check our inline style attribute.
-    if (matchAuthorAndUserStyles && m_state.styledElement() && m_state.styledElement()->inlineStyle()) {
-        // Inline style is immutable as long as there is no CSSOM wrapper.
-        // FIXME: Media control shadow trees seem to have problems with caching.
-        bool isInlineStyleCacheable = !m_state.styledElement()->inlineStyle()->isMutable() && !m_state.styledElement()->isInShadowTree();
-        // FIXME: Constify.
-        addElementStyleProperties(m_state.styledElement()->inlineStyle(), isInlineStyleCacheable);
-    }
+    if (matchAuthorAndUserStyles && m_element.isStyledElement()) {
+        StyledElement& styledElement = toStyledElement(m_element);
+        // Now check our inline style attribute.
+        if (styledElement.inlineStyle()) {
+            // Inline style is immutable as long as there is no CSSOM wrapper.
+            // FIXME: Media control shadow trees seem to have problems with caching.
+            bool isInlineStyleCacheable = !styledElement.inlineStyle()->isMutable() && !styledElement.isInShadowTree();
+            // FIXME: Constify.
+            addElementStyleProperties(styledElement.inlineStyle(), isInlineStyleCacheable);
+        }
 
-    // Now check SMIL animation override style.
-    if (includeSMILProperties && matchAuthorAndUserStyles && m_state.styledElement() && m_state.styledElement()->isSVGElement())
-        addElementStyleProperties(toSVGElement(m_state.styledElement())->animatedSMILStyleProperties(), false /* isCacheable */);
+        // Now check SMIL animation override style.
+        if (includeSMILProperties && styledElement.isSVGElement())
+            addElementStyleProperties(toSVGElement(styledElement).animatedSMILStyleProperties(), false /* isCacheable */);
+    }
 }
 
 bool ElementRuleCollector::hasAnyMatchingRules(RuleSet* ruleSet)
