Source/WebCore/css/ElementRuleCollector.h
@@ -1,6 +1,6 @@
 /*
  * Copyright (C) 1999 Lars Knoll (knoll@kde.org)
- * Copyright (C) 2003, 2004, 2005, 2006, 2007, 2008, 2009, 2010, 2011, 2013 Apple Inc. All rights reserved.
+ * Copyright (C) 2003, 2004, 2005, 2006, 2007, 2008, 2009, 2010, 2011, 2013, 2014 Apple Inc. All rights reserved.
  *
  * This library is free software; you can redistribute it and/or
  * modify it under the terms of the GNU Library General Public
@@ -40,16 +40,17 @@ class SelectorFilter;
 
 class ElementRuleCollector {
 public:
-    ElementRuleCollector(StyleResolver* styleResolver, const StyleResolver::State& state)
-        : m_state(state)
-        , m_ruleSets(styleResolver->ruleSets())
-        , m_selectorFilter(styleResolver->selectorFilter())
+    ElementRuleCollector(Element& element, RenderStyle* style, const DocumentRuleSets& ruleSets, const SelectorFilter& selectorFilter)
+        : m_element(element)
+        , m_style(style)
+        , m_ruleSets(ruleSets)
+        , m_selectorFilter(selectorFilter)
         , m_isPrintStyle(false)
         , m_regionForStyling(0)
         , m_pseudoStyleRequest(NOPSEUDO)
         , m_sameOriginOnly(false)
         , m_mode(SelectorChecker::ResolvingStyle)
-        , m_canUseFastReject(m_selectorFilter.parentStackIsConsistent(state.parentNode()))
+        , m_canUseFastReject(m_selectorFilter.parentStackIsConsistent(element.parentNode()))
     {
     }
 
@@ -70,7 +71,6 @@ public:
     const Vector<RefPtr<StyleRuleBase>>& matchedRuleList() const;
 
 private:
-    Document& document() { return m_state.document(); }
     void addElementStyleProperties(const StyleProperties*, bool isCacheable = true);
 
     void matchUARules(RuleSet*);
@@ -86,9 +86,10 @@ private:
     void addMatchedRule(const RuleData*);
     void clearMatchedRules();
 
-    const StyleResolver::State& m_state;
-    DocumentRuleSets& m_ruleSets;
-    SelectorFilter& m_selectorFilter;
+    Element& m_element;
+    RenderStyle* m_style;
+    const DocumentRuleSets& m_ruleSets;
+    const SelectorFilter& m_selectorFilter;
 
     bool m_isPrintStyle;
     RenderRegion* m_regionForStyling;
